# quartermaster-sdk-py

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  NEXT_STEPS.md  README.md  RELEASING.md  TODO.md  pyproject.toml
qm-engine/: README.md  TODO.md  pyproject.toml
qm-engine/src/qm_engine/: events.py  nodes.py  types.py
qm-engine/tests/: conftest.py
qm-engine/tests/integration/: test_complex_flows.py  test_dispatchers.py  test_error_handling.py  test_flow_runner.py  test_memory_providers.py  test_streaming.py
qm-engine/tests/unit/: test_context_manager.py  test_memory.py  test_traverse_in.py  test_traverse_out.py
qm-providers/: README.md  pyproject.toml
qm-providers/src/qm_providers/: __init__.py  base.py  registry.py  types.py
qm-providers/tests/: conftest.py  test_providers.py  test_registry.py
qm-tools/: .gitignore  README.md  TODO.md  pyproject.toml
qm-tools/src/qm_tools/: __init__.py  registry.py  types.py
qm-tools/tests/: test_base.py  test_builtin_tools.py  test_chain.py  test_registry.py  test_types.py
quartermaster-code-runner/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
quartermaster-code-runner/.github/workflows/: ci.yml
quartermaster-code-runner/src/quartermaster_code_runner/: __init__.py  app.py  schemas.py  security.py
quartermaster-code-runner/tests/integration/: test_app.py
quartermaster-code-runner/tests/unit/: test_schemas.py
quartermaster-engine/: README.md  pyproject.toml
quartermaster-engine/.github/workflows/: ci.yml
quartermaster-engine/src/quartermaster_engine/: __init__.py  cancellation.py  events.py  example_runner.py  images.py  types.py
quartermaster-engine/tests/: conftest.py  test_example_runner.py  test_images.py  test_message_pipeline.py  test_smoke_simple_graph.py  test_v030_end_node_semantics.py  test_v030_events_and_context.py  test_v031_back_node.py  test_v040_per_node_tool_filter.py  test_v060_removed_aliases.py  test_v063_instruction_form_parse_hardening.py  test_v070_node_retry.py  test_v070_structured_output_via_forced_tool_call.py  test_v070_tool_log_truncation.py
quartermaster-engine/tests/benchmarks/: test_benchmarks.py
quartermaster-engine/tests/integration/: test_complex_flows.py  test_dispatchers.py  test_error_handling.py  test_flow_runner.py  test_memory_providers.py  test_streaming.py
quartermaster-engine/tests/unit/: test_message_router.py  test_node_execution.py  test_stores.py  test_traverse_in.py  test_traverse_out.py
quartermaster-graph/: LICENSE  README.md  pyproject.toml
quartermaster-graph/docs/: GRAPH_FORMAT_SPEC.md  YAML_GUIDE.md
quartermaster-graph/src/quartermaster_graph/: __init__.py  builder.py  cloud.py  enums.py  metadata.py  models.py  serialization.py  templates.py  traversal.py  validation.py
quartermaster-graph/tests/: conftest.py  test_builder.py  test_builder_advanced.py  test_builder_nested.py  test_builder_roundtrip.py  test_cloud.py  test_compat.py  test_enums.py  test_metadata.py  test_models.py  test_serialization.py  test_templates.py  test_traversal.py  test_v060_extra_body_builder.py  test_v060_stop_kwargs_removed.py  test_v070_retry_kwarg.py  test_validation.py  test_validation_integration.py  test_versioning.py  test_yaml_roundtrip.py
quartermaster-mcp-client/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
quartermaster-mcp-client/examples/: basic_async.py  basic_sync.py  error_handling.py
quartermaster-mcp-client/src/quartermaster_mcp_client/: __init__.py  client.py  errors.py  transports.py
quartermaster-mcp-client/tests/: __init__.py  conftest.py  test_parsing.py  test_transports.py
quartermaster-nodes/: README.md  pyproject.toml
quartermaster-nodes/quartermaster_nodes/: __init__.py  base.py  config.py  enums.py  exceptions.py  protocols.py  safe_eval.py
quartermaster-nodes/quartermaster_nodes/chain/: chain.py
quartermaster-nodes/quartermaster_nodes/nodes/: __init__.py
quartermaster-nodes/quartermaster_nodes/registry/: __init__.py  registry.py
quartermaster-nodes/tests/: conftest.py  test_safe_eval.py  test_v060_noderegistry_alias_removed.py
quartermaster-nodes/tests/test_chain/: test_chain.py  test_llm_handlers.py
quartermaster-nodes/tests/test_integration/: test_flows.py
quartermaster-nodes/tests/test_nodes/: test_control_flow.py  test_data_nodes.py  (+13 more)
quartermaster-providers/: README.md  pyproject.toml
quartermaster-providers/tests/: test_client_per_loop.py  test_exceptions.py  test_local_providers.py  test_ollama_chat.py  test_quartermaster_provider.py  test_thinking_enabled_auto_chat_template_kwargs.py  test_v030_vision_all_providers.py  test_v040_circuit_breaker.py  test_v040_ollama_native.py  test_v060_extra_body.py  test_v060_text_toolcall_fallback.py  test_v061_gemma4_asymmetric_markers.py  test_v070_stream_cancel.py
quartermaster-sdk/: README.md  pyproject.toml
quartermaster-sdk/tests/: test_examples_smoke.py  test_public_surface.py  test_v020_surface.py  test_v022_async_runner.py  test_v022_tool_streaming.py  test_v030_filtered_iterators.py  test_v030_telemetry.py  test_v030_trace.py  test_v030_vision.py  test_v031_telemetry_autoimport.py  test_v040_cancellation.py  test_v040_inline_tools.py  test_v040_instruction_form_robustness.py  test_v040_lint.py  test_v040_session_store.py  test_v040_telemetry_kwarg.py  test_v040_timeouts.py  test_v040_typed_events.py  test_v060_lint_rules_removed.py  test_v060_parse_partial.py  test_v070_retry_integration.py
quartermaster-tools/: README.md  pyproject.toml
quartermaster-tools/tests/: test_a2a_tools.py  test_agent_session_tools.py  test_base.py  test_browser_tools.py  test_builtin_tools.py  test_code_tools.py  test_compliance_tools.py  test_data_tools.py  test_database_tools.py  test_decorator.py  test_email_tools.py  test_filesystem_tools.py  test_integration.py  test_memory_tools.py  test_messaging_tools.py  test_observability_tools.py  test_privacy_tools.py  test_types.py  test_v040_cost_local_gpu.py  test_v060_removed_tool_aliases.py  test_vector_tools.py  test_web_search_google_brave.py  test_web_search_tools.py
(+609 files in other folders)
