[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qm-engine"
version = "0.1.0"
description = "Execution engine for AI agent graphs — traversal, branching, merging, memory, message passing, and error handling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "MindMade", email = "dev@mindmade.ai" }
]
keywords = ["ai-agents", "execution-engine", "graph", "orchestration", "flow-runner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qm-graph>=0.1.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
redis = ["redis>=5.0"]
all = [
    "aiosqlite>=0.19",
    "redis>=5.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/mindmade-ai/quartermaster-opensource"
Documentation = "https://github.com/mindmade-ai/quartermaster-opensource/tree/main/packages/qm-engine"
Repository = "https://github.com/mindmade-ai/quartermaster-opensource.git"
Issues = "https://github.com/mindmade-ai/quartermaster-opensource/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qm_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=qm_engine --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "UP", "I"]
ignore = ["E501", "UP042"]
