[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qm-providers"
version = "0.1.0"
description = "Unified multi-LLM provider abstraction supporting OpenAI, Anthropic, Google, Groq, xAI and more"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = ["llm", "ai", "openai", "anthropic", "google", "groq", "multi-provider", "abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.5"]
groq = ["groq>=0.5"]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "groq>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/quartermaster-ai/quartermaster"
Repository = "https://github.com/quartermaster-ai/quartermaster"
Issues = "https://github.com/quartermaster-ai/quartermaster/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qm_providers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require real API keys (deselect with -m 'not integration')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
