[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qm-tools"
version = "0.1.0"
description = "Tool abstraction framework and chain-of-responsibility handler pattern for AI agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "MindMade", email = "dev@mindmade.ai" }
]
keywords = ["ai-agents", "tools", "chain", "handler", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/mindmade-ai/quartermaster-opensource"
Documentation = "https://github.com/mindmade-ai/quartermaster-opensource/tree/main/packages/qm-tools"
Repository = "https://github.com/mindmade-ai/quartermaster-opensource.git"
Issues = "https://github.com/mindmade-ai/quartermaster-opensource/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qm_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=qm_tools --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH"]
ignore = ["E501", "TCH001"]
