[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quartermaster-engine"
version = "0.3.1"
description = "Execution engine for AI agent graphs — traversal, branching, merging, memory, message passing, and error handling"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = ["ai-agents", "execution-engine", "graph", "orchestration", "flow-runner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "quartermaster-graph>=0.3.1",
    "quartermaster-providers>=0.3.1",
    # ``quartermaster-nodes`` ships ``safe_eval`` (a simpleeval sandbox)
    # which the example runner uses for ``Var``/``If``/``Switch`` node
    # expression evaluation.  Pre-0.1.2 this was an implicit workspace
    # dep — it would ImportError when installed standalone.
    "quartermaster-nodes>=0.3.1",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
redis = ["redis>=5.0"]
all = [
    "aiosqlite>=0.19",
    "redis>=5.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Repository = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Issues = "https://github.com/MindMadeLab/quartermaster-sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=quartermaster_engine --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "UP", "I"]
ignore = ["E501", "UP042"]
