[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quartermaster-mcp-client"
version = "0.7.0"
description = "Lightweight MCP (Model Context Protocol) client with async/sync support, SSE and Streamable HTTP transports"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Repository = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Issues = "https://github.com/MindMadeLab/quartermaster-sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster_mcp_client"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["quartermaster_mcp_client"]

[tool.coverage.report]
show_missing = true
fail_under = 85
