[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quartermaster-providers"
version = "0.4.5"
description = "Unified multi-LLM provider abstraction supporting OpenAI, Anthropic, Google, Groq, xAI and more"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = ["llm", "ai", "openai", "anthropic", "google", "groq", "multi-provider", "abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ``openai>=1.0`` is a hard dependency because the OpenAI Python SDK is the
    # transport for every OpenAI-compatible endpoint we ship out of the box —
    # not only the cloud OpenAI provider but also Ollama, vLLM, LM Studio, TGI,
    # LocalAI and llama.cpp via ``OpenAICompatibleProvider``. Making it optional
    # caused ``register_local("ollama")`` to fail for users who never asked for
    # cloud OpenAI access. See the 0.1.2 release notes for details.
    "openai>=1.0",
    # ``httpx`` powers ``OllamaProvider.chat()`` — the synchronous
    # native-``/api/chat`` shim downstream callers asked for so they can
    # call Ollama from non-async stacks (Celery workers, Django views,
    # CLI scripts) without ``asgiref.async_to_sync`` wrappers.
    "httpx>=0.25",
]

[project.optional-dependencies]
# Kept for backwards compatibility with anyone pinning ``[openai]`` — the
# package is now installed unconditionally above.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.5"]
groq = ["groq>=0.5"]
all = [
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "groq>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Repository = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Issues = "https://github.com/MindMadeLab/quartermaster-sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster_providers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require real API keys (deselect with -m 'not integration')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
