[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quartermaster-sdk"
version = "0.4.6"
description = "Quartermaster — modular AI agent orchestration framework. Install this to get all packages."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = [
    "ai", "agents", "orchestration", "llm", "graph", "workflow",
    "quartermaster", "mindmade",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "quartermaster-graph>=0.4.6",
    "quartermaster-providers>=0.4.6",
    "quartermaster-tools>=0.4.6",
    "quartermaster-nodes>=0.4.6",
    "quartermaster-engine>=0.4.6",
]

[project.optional-dependencies]
# Individual provider SDKs
openai = ["quartermaster-providers[openai]"]
anthropic = ["quartermaster-providers[anthropic]"]
google = ["quartermaster-providers[google]"]
groq = ["quartermaster-providers[groq]"]
providers-all = ["quartermaster-providers[all]"]

# Tools extras
web = ["quartermaster-tools[web]"]
browser = ["quartermaster-tools[browser]"]
database = ["quartermaster-tools[database]"]
vector = ["quartermaster-tools[vector]"]
privacy = ["quartermaster-tools[privacy]"]
observability = ["quartermaster-tools[observability]"]
tools-all = ["quartermaster-tools[all]"]

# Standalone packages (not included by default)
mcp = ["quartermaster-mcp-client>=0.4.6"]
code-runner = ["quartermaster-code-runner>=0.4.6"]

# OpenTelemetry instrumentation (qm.telemetry.instrument())
telemetry = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

# JSON Schema validation for ``qm.instruction_form(schema=<dict>)`` — soft
# optional dep: without it, dict-schema callers get back the parsed dict
# with a one-time UserWarning and no validation.
jsonschema = ["jsonschema>=4.0"]

# Everything
all = [
    "quartermaster-sdk[providers-all,tools-all,mcp,code-runner,telemetry,jsonschema]",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Repository = "https://github.com/MindMadeLab/quartermaster-sdk-py"
Issues = "https://github.com/MindMadeLab/quartermaster-sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
