[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quartermaster-tools"
version = "0.4.7"
description = "Tool abstraction framework and chain-of-responsibility handler pattern for AI agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "MindMade", email = "info@mindmade.io" },
]
keywords = ["ai-agents", "tools", "chain", "handler", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "simpleeval>=1.0.5",
]

[project.optional-dependencies]
web = ["httpx>=0.25.0"]
llm = ["quartermaster-providers>=0.4.7"]
database = ["sqlalchemy>=2.0"]
vector = ["chromadb>=0.4", "sentence-transformers>=2.2"]
privacy = ["presidio-analyzer>=2.2"]
observability = ["opentelemetry-sdk>=1.20"]
browser = ["playwright>=1.40"]
google = ["google-api-python-client>=2.100"]
all = [
    "quartermaster-tools[web,llm,database,vector,privacy,observability,browser,google]",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/quartermaster-ai/quartermaster"
Repository = "https://github.com/quartermaster-ai/quartermaster"
Issues = "https://github.com/quartermaster-ai/quartermaster/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=quartermaster_tools --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH"]
ignore = ["E501", "TCH001"]
